--- a/kapitel/fazit.tex
+++ b/kapitel/fazit.tex
@@ -4,11 +4,15 @@ dieser Branche gibt es viele gute Möglichkeiten, Systeme mithilfe von Sensoren
 zu überwachen und zu beeinflussen. Auch mit dem Hintergrund des
 Bevölkerungswachstums und der damit einhergehenden Steigerung des Mangel an
 Lebensmitteln ist es besonders wichtig, jede Chance zu nutzen, die
-Landwirtschaft so effizient wie möglich zu gestalten. Systeme wie der Farmbot
-helfen, jeden freien Platz sinnvoll zu nutzen und animieren die Menschen, auch
-Zuhause Pflanzen selbst zu züchten. Jedoch muss dies in einem für die Umwelt
-möglichst erträglichen Rahmen geschehen. Hierfür sind die Roboter eine große
-Hilfe, die zum Großteil, im Gegensatz zu den alten dieselbetriebenen
-Landmaschinen, durch elektrische Antriebe bewegt werden. Durch Solarmodule
-können diese immer weiter nahezu autark und emissionsfrei arbeiten, was eine
-hohe Entlastung für die Umwelt darstellt.
+Landwirtschaft so effizient wie möglich zu gestalten. Auch den Aspekt, der
+Zerstörung des fruchtbaren Boden muss man beachten, beim Gedanken an die
+Ernährung der immer größer werdenden Menschheit.\cite{rainer2003diskurs}Systeme
+wie der Farmbot helfen, jeden freien Platz sinnvoll zu nutzen und animieren die
+Menschen, auch Zuhause Pflanzen selbst zu züchten. Jedoch muss dies in einem
+für die Umwelt möglichst erträglichen Rahmen geschehen. Hierfür sind die
+Roboter eine große Hilfe, die zum Großteil, im Gegensatz zu den alten
+dieselbetriebenen Landmaschinen, durch elektrische Antriebe bewegt werden.
+Durch Solarmodule können diese immer weiter nahezu autark und emissionsfrei
+arbeiten, was eine hohe Entlastung für die Umwelt darstellt. Dass die
+konservative Landwirtschaft immer mehr Technik einsetzt, zeigt sich bereits an
+einigen Umfragen.
