--- a/kapitel/hauptteil.tex
+++ b/kapitel/hauptteil.tex
@@ -1,5 +1,13 @@
-
-In der Landwirtschaft gibt es viele Prozesse, die immer gleich sind. Solche Aufgaben sind perfekt dafür geeignet, um mithilfe von Robotik automatisiert zu werden. Zudem hat man bei Feldern, Äckern, etc. immer feste Ortspunkte und kann somit sehr gut mit GPS Koordinaten arbeiten.
-Im Folgenden wird auf die Grundlagen der benötigten Sensoren, sowie deren Flächenabdeckungsmöglichkeiten eingegangen.
-Zudem werde ich einige bereits existierende Lösungsmöglichkeiten vorstellen und einen Ausblick geben, wie diese auf Industriegröße skaliert werden können.
-	
+In der Landwirtschaft gibt es viele Prozesse, die immer gleich sind. Solche
+Aufgaben sind perfekt dafür geeignet, um mithilfe von sensorbasierter Robotik
+automatisiert zu werden. Zudem hat man bei Feldern, Äckern, etc. immer feste
+Ortspunkte und kann somit sehr gut mit den globalen GPS Koordinaten arbeiten.
+Im Folgenden wird auf die Grundlagen der benötigten Sensoren, sowie deren
+Flächenabdeckungsmöglichkeiten eingegangen. Zudem werde ich einige bereits
+existierende Robotersysteme vorstellen und einen Ausblick geben, wie diese auf
+Industriegröße skaliert werden können und wo sie bereits Anwendung finden. Im
+weiteren Verlauf wird dann noch der immer weitverbreitetere Aspekt der
+künstlichen Intelligenz aufgegriffen und der Bezug zur Landwirtschaft
+hergestellt. Das Ende der Arbeit fässt die gesammelten Erkenntnisse zusammen
+und gibt eine Zukunftsprognose zum Thema Automatisierung der Landwirtschaft
+durch sensorbasierte Robotik.
