--- a/kapitel/roboterfahrzeuge.tex
+++ b/kapitel/roboterfahrzeuge.tex
@@ -12,8 +12,14 @@ Teil mithilfe von künstlicher Intelligenz.
 \end{figure}
 
 Der Farmdroid FD20 arbeitet hierbei komplett autonom und klimaneutral durch
-Solarpanels. Laut eines Zeitungsartikels ist dieser der weltweit erste,
-vollautonome Agrarroboter der Welt.\cite{donaukurier2022}\\ Die Aufgabe dieses
-Roboters ist die Saat und die Unkrautvernichtung. Laut Hersteller hat sich der
-Farmdroid bereits nach bis zu 1,5 Jahren ammotisiert und arbeitet ab diesem
-Zeitpunkt aufgrund der Solarpanels mit extrem niedrigen Unterhaltskosten.
+Solarpanels. Diese Solarpanels können bei guter Sonneneinstrahlung mehr als
+genug Energie für den Roboter liefern. Durch zwei zusätzliche Lithium-Ionen
+Akkus ist es möglich, dass der Farmdroid auch nach Sonnenuntergang autark
+weiterarbeitet, was einen Dauerbetrieb ermöglicht und damit extrem effizient
+ist.\cite{jungwirth2022arbeitszeitbedarf}\\ Die Aufgabe des modernsten
+Agrarroboters der Welt\cite{donaukurier2022} ist die Saat und die
+Unkrautvernichtung. Laut Hersteller hat sich der Farmdroid bereits nach bis zu
+1,5 Jahren ammotisiert und arbeitet ab diesem Zeitpunkt aufgrund der
+Solarpanels mit extrem niedrigen Unterhaltskosten. Zudem ist der Roboter
+aufgrund der zwei GNSS Empfänger und eines RTK Korrektursignals, welches in der
+Basisstation sehr genau.\cite{jungwirth2022arbeitszeitbedarf}
