--- a/ref/ref.bib
+++ b/ref/ref.bib
@@ -128,3 +128,23 @@ address = {Bonn}
   year={2020},
   publisher={B{\"u}ndnis f{\"u}r eine enkeltaugliche Landwirtschaft}
 }
+@phdthesis{rainer2003diskurs,
+  title={Der Diskurs der {\"U}berbev{\"o}lkerung: zu Metaphorik und Funktion einer in Aussicht gestellten globalen Katastrophe},
+  author={Rainer, Bettina},
+  year={2003}
+}
+
+@article{jungwirth2022arbeitszeitbedarf,
+  title={Arbeitszeitbedarf und Arbeitserledigungskosten eines teilautonomen Feldroboters f{\"u}r die Saat und das Hacken von Biozuckerr{\"u}ben},
+  author={Jungwirth, Moritz and Handler, Franz},
+  journal={Arbeit unter einem DA-CH: Der Landwirt im 4.0-Modus},
+  pages={147},
+  year={2022}
+}
+@article{koch2006neues,
+  title={Ein neues Verfahren zur Online-Feuchtemessung in Leistungstransformatoren},
+  author={Koch, M and Tenbohlen, S},
+  journal={ETG Fachtagung „Diagnostik elektrotechnischer Betriebsmittel “, Fachbericht},
+  volume={104},
+  year={2006}
+}
