--- a/kapitel/temperatursensor.tex
+++ b/kapitel/temperatursensor.tex
@@ -1,4 +1,4 @@
-Wichtig für das Wachstum von Pflanzen ist natürlich die Temperatur. Je nach
+Wichtig für das Wachstum von Pflanzen ist die Temperatur. Je nach
 Herkunft benötigen Pflanzen unterschiedliche Temperaturen. Um die das Absterben
 von Pflanzen durch falsche Temperaturen zu verhindern, benötigen Roboter zur
 Überprüfung Temperatursensoren. Es gibt verschiedene Arten von
