--- a/kapitel/einleitung.tex
+++ b/kapitel/einleitung.tex
@@ -1,5 +1,28 @@
-	In den vergangenen Jahrzehnten entwickelte sich durch das steigende Bevölkerungswachstum ein weltweiter Mangel an Ressourcen, vor allem an Nahrungsmitteln.\\!!!!!!QUELLE FINDEN - AM BESTEN GRAFIK!!!!!!\\ Die Folge hiervon sind Massentierhaltung, Monokulturen und Gewächshausplantagen. Der Trend geht zur Perfektion der Erträge, bei möglichst geringem Aufwand.
-	\\Auch in anderen Bereichen ist die Frage nach schnellen, zuverlässigen Massenproduktionen bereits seit mehreren Jahrzehnten diskutiert.
-	\\Vorallem die Automobilindustrie hat bereits früh begonnen sich mit Automatisierung zu beschäftigen. Erste Ansätze gab es hier bereits 1913 durch Henry Ford, welcher die ersten Autos auf dem Fließband zusammenbauen ließ. Dieses System wurde über die Jahrzehnte soweit ausgebaut, dass heutzutage bereits viele Industrieroboter die Bandarbeit nahezu komplett autonom erledigen.
-	\\Jedoch gibt es auch in der Landwirtschaft bereits Ansätze, um die Arbeit zu industrialisieren.
-	\\In der folgenden Arbeit werden die fundamentalen Grundlagen für eine effiziente Nutzung von sensorbasierten Robotersystemen erläutert. Dabei wird auf bereits existierende Systeme aufgezeigt, die benötigte Sensorik erläutert, sowie auf gesellschaftliche und technische Herausforderungen eingegangen.
+In den vergangenen Jahrzehnten entwickelte sich durch das steigende
+Bevölkerungswachstum ein weltweiter Mangel an Ressourcen, vor allem an
+Nahrungsmitteln.\\!!!!!!QUELLE FINDEN - AM BESTEN GRAFIK!!!!!!\\ Die Folge
+hiervon sind Massentierhaltung, Monokulturen und Gewächshausplantagen. Der
+Trend geht zur Perfektion der Erträge, bei möglichst geringem Aufwand. Dabei
+wird der Fokus darauf gelegt, die vorhandene Fläche optimal zu nutzen, um viele
+Lebensmittel auf geringem Raum zu produzieren. Dabei wird außerdem darauf
+geachtet, den Ertrag der vorhandenen Pflanzen zu maximieren. Dies kann durch
+eine intelligente Bewässerung, die Optimierung der Temperaturbedingungen, sowie
+eine effiziente Bekämpfung von Unkraut und Schädlingen realisiert werden. Dabei
+spielen Sensoren, zur Überwachung der Felder eine große Rolle. Aus den
+Sensordaten können Robotersysteme erkennen, an welcher Stelle eine Aktion zur
+Verbesserung Pflanzenbedingungen und damit der Maximierung des Ertrags
+erforderlich ist. Ähnlich verhält es sich auch bei der Tierzucht, wobei Roboter
+hierbei auch zum Wohl der Tiere durch Futterverpflegung und Stallreinigung
+beigetragen wird. \\Auch in anderen Bereichen ist die Frage nach schnellen,
+zuverlässigen Massenproduktionen bereits seit mehreren Jahrzehnten diskutiert.
+\\Vorallem die Automobilindustrie hat bereits früh begonnen sich mit
+Automatisierung zu beschäftigen. Erste Ansätze gab es hier bereits 1913 durch
+Henry Ford, welcher die ersten Autos auf dem Fließband zusammenbauen ließ.
+Dieses System wurde über die Jahrzehnte soweit ausgebaut, dass heutzutage
+bereits viele Industrieroboter die Bandarbeit nahezu komplett autonom
+erledigen. \\Jedoch gibt es auch in der Landwirtschaft bereits Ansätze, um die
+Arbeit zu industrialisieren. \\In der folgenden Arbeit werden die fundamentalen
+Grundlagen für eine effiziente Nutzung von sensorbasierten Robotersystemen
+erläutert. Dabei wird auf bereits existierende Systeme aufgezeigt, die
+benötigte Sensorik erläutert, sowie auf gesellschaftliche und technische
+Herausforderungen eingegangen.
