--- a/kapitel/fazit.tex
+++ b/kapitel/fazit.tex
@@ -16,3 +16,4 @@ Durch Solarmodule können diese immer weiter nahezu autark und emissionsfrei
 arbeiten, was eine hohe Entlastung für die Umwelt darstellt. Dass die
 konservative Landwirtschaft immer mehr Technik einsetzt, zeigt sich bereits an
 einigen Umfragen.
+Auch gesundheitlich kann die Digitalisierung der Landwirtschaft viele Vorteile bieten. Durch den Verzicht auf Pestizide, bzw. die Ausbringung durch Drohnen aus der Ferne, wird die Gesundheit der Bauern geschont, da sie die giftigen Pestizide nicht einatmen. \cite{jungwirth2022arbeitszeitbedarf}
