--- a/kapitel/nahinfrarotspektroskopie.tex
+++ b/kapitel/nahinfrarotspektroskopie.tex
@@ -16,8 +16,8 @@ wobei hier der NIR-Sensor meist am Korntankrohr des Mähdreschers verbaut ist.
 \begin{figure}[ht]
 	\centering
 	\includegraphics[width=0.5\textwidth]{bilder/Krone NIR Control dual.jpg}
-	\caption[Sprühdrohne]{NIR-Sensor am Mähdrescher}
-	\label{fig:Mähdrescher NIR-Sensor}
+	\caption[Mähhdrescher mit NIR-Sensor]{NIR-Sensor am Mähdrescher}
+	\label{fig:Mähhdrescher NIR-Sensor}
 \end{figure}
 
 Er dient in diesem Fall der Überwachung der Feuchtigkeit des Saatguts,
