--- a/kapitel/thermoelemente.tex
+++ b/kapitel/thermoelemente.tex
@@ -1,6 +1,9 @@
 Ein weiterer Sensor, welcher für die Bodentemperaturmessung verwendet wird,
 sind Thermoelemente. Grundlage dieses Sensors ist eine Verbindung zweier Drähte
-unterschiedlicher Materialien.Die Funktionsweise des Sensors basiert auf
+unterschiedlicher Materialien. 
+
+
+Die Funktionsweise des Sensors basiert auf
 thermoelektrischen Effekten. Der sogenannte Peltier-Effekt besagt hierbei, dass
 bei einer Verbindung von zwei, unter Strom stehenden Drähten aus
 unterschiedlichen Materialien ein Wärmestrom fließt. Dieser wird an der
