--- a/kapitel/tierpflege.tex
+++ b/kapitel/tierpflege.tex
@@ -14,6 +14,6 @@ vollautomatisiert durch die Ställe fahren. (Abb. 5.1)
 \begin{figure}[ht]
     \centering
     \includegraphics[width=0.5\textwidth]{bilder/futterroboter.jpg}
-    \caption[Sprühdrohne]{Futterroboter in Kuhstall}
+    \caption[Futterroboter in Kuhstall]{Futterroboter in Kuhstall}
     \label{fig:sprühdrfutterroboter}
 \end{figure}
