--- a/ref/ref.bib
+++ b/ref/ref.bib
@@ -139,3 +139,10 @@ address = {Bonn}
   volume={104},
   year={2006}
 }
+@article{keilholz2019bewasserung,
+  title={Bew{\"a}sserung 4.0: ein m{\"o}glicher Ansatz zur weiteren Optimierung der Bew{\"a}sserung},
+  author={Keilholz, Patrick and Spinnreker-Czichon, Dominic and Huttner, Philipp and Augstein, Antje and Borsdorff, Dirk and Erdle, Klaus and Ahlers, Siv and Deubel, Annette},
+  journal={KW Korrespondenz Wasserwirtschaft,(ISSN: 1865-9926), S},
+  pages={510--517},
+  year={2019}
+}
