--- a/kapitel/infrarot.tex
+++ b/kapitel/infrarot.tex
@@ -6,7 +6,21 @@ Berühren empfindlicher Gegenstände, wie Blätter verhindert. Die
 Entfernung zum Messpunkt ermöglicht auch, sehr hohe Temperaturen zu messen,
 ohne die Infrarotsensorik durch zu hohe Temperaturen zu gefährden.
 
+\begin{figure}[ht]
+	\centering
+	\includegraphics[width=0.5\textwidth]{bilder/infrarotsensor.png}
+	\caption[Sprühdrohne]{Sprühdrohne beim Aufbringen von Pestiziden}
+	\label{fig:sprühdrohne}
+\end{figure}
+
+\begin{figure}[!h]
+	\centering
+	\includegraphics[width=0.5\textwidth]{bilder/infrarot_pflanze.jpg}
+	\caption[Sprühdrohne]{Sprühdrohne beim Aufbringen von Pestiziden}
+	\label{fig:sprühdrohne}
+\end{figure}
+
 Funktionsweise von Infrarotthermographie: \\
-Messgegenstände mit einer Temperatur von > 900K strahlen Energie ab, der in mithilfe von Wärmebildtechnik sichtbar gemacht werden kann und so als Bild, für den Menschen sichtbar dargestellt werden kann.
+Messgegenstände mit einer Temperatur von $>$ 900K strahlen Energie ab, der in mithilfe von Wärmebildtechnik sichtbar gemacht werden kann und so als Bild, für den Menschen sichtbar dargestellt werden kann.
 Hierzu werden die Spektralbereiche Nahinfrarot(NIR), mittleres Infrarot (MIR) und langes Infrarot (LIR) betrachtet. 
 Diese Spektren teilen sich in drei Teile im Bereich von 780 bis 1400nm auf.\cite{schuster2004infrarotthermographie}
