--- a/Seminararbeit_PfitzPfeitzner.tex
+++ b/Seminararbeit_PfitzPfeitzner.tex
@@ -10,9 +10,11 @@
 \usepackage{graphicx}
 \usepackage[section]{placeins}
 \usepackage{fontenc}
-\usepackage[automark, headsepline]{scrlayer-scrpage}
+\usepackage[automark]{scrlayer-scrpage}
 \usepackage[ngerman]{babel}
 \usepackage[natbib=true,style=numeric, sorting=none]{biblatex}
+
+
 
 %%%%%%%%% KOPFZEILE %%%%%%%%%%%%%%%%%%%%%
 \pagestyle{scrheadings} 
@@ -28,7 +30,6 @@
 		Betreuer:   & Prof. Dr. Christian Pfitzner \\
 		Ausgabedatum: & 23.03.2023 \\
 		Abgabedatum: & 20.06.2023 \\
-
 	\end{tabular}
 }
 
