--- a/ref/ref.bib
+++ b/ref/ref.bib
@@ -146,3 +146,8 @@ address = {Bonn}
   pages={510--517},
   year={2019}
 }
+@article{may2015transiente,
+  title={Transiente Methoden der Infrarot-Thermografie zur zerst{\"o}rungsfreien Fehleranalytik in der mikroelektronischen Aufbau-und Verbindungstechnik},
+  author={May, M Eng Daniel},
+  year={2015}
+}
