--- a/Seminararbeit_PfitzPfeitzner.tex
+++ b/Seminararbeit_PfitzPfeitzner.tex
@@ -13,7 +13,9 @@
 \usepackage[automark]{scrlayer-scrpage}
 \usepackage[ngerman]{babel}
 \usepackage[natbib=true,style=numeric, sorting=none]{biblatex}
-
+\usepackage{svg}
+\usepackage{setspace}
+\setstretch{1.5}
 
 
 %%%%%%%%% KOPFZEILE %%%%%%%%%%%%%%%%%%%%%
