--- a/kapitel/fazit.tex
+++ b/kapitel/fazit.tex
@@ -6,14 +6,18 @@ Bevölkerungswachstums und der damit einhergehenden Steigerung des Mangel an
 Lebensmitteln ist es besonders wichtig, jede Chance zu nutzen, die
 Landwirtschaft so effizient wie möglich zu gestalten. Auch den Aspekt, der
 Zerstörung des fruchtbaren Boden muss man beachten, beim Gedanken an die
-Ernährung der immer größer werdenden Menschheit.\cite{rainer2003diskurs} Systeme
-wie der Farmbot helfen, jeden freien Platz sinnvoll zu nutzen und animieren die
-Menschen, auch Zuhause Pflanzen selbst zu züchten. Jedoch muss dies in einem
-für die Umwelt möglichst erträglichen Rahmen geschehen. Hierfür sind die
-Roboter eine große Hilfe, die zum Großteil, im Gegensatz zu den alten
+Ernährung der immer größer werdenden Menschheit.\cite{rainer2003diskurs}
+Systeme wie der Farmbot helfen, jeden freien Platz sinnvoll zu nutzen und
+animieren die Menschen, auch Zuhause Pflanzen selbst zu züchten. Jedoch muss
+dies in einem für die Umwelt möglichst erträglichen Rahmen geschehen. Hierfür
+sind die Roboter eine große Hilfe, die zum Großteil, im Gegensatz zu den alten
 dieselbetriebenen Landmaschinen, durch elektrische Antriebe bewegt werden.
 Durch Solarmodule können diese immer weiter nahezu autark und emissionsfrei
 arbeiten, was eine hohe Entlastung für die Umwelt darstellt. Dass die
 konservative Landwirtschaft immer mehr Technik einsetzt, zeigt sich bereits an
-einigen Umfragen.
-Auch gesundheitlich kann die Digitalisierung der Landwirtschaft viele Vorteile bieten. Durch den Verzicht auf Pestizide, bzw. die Ausbringung durch Drohnen aus der Ferne, wird die Gesundheit der Bauern geschont, da sie die giftigen Pestizide nicht einatmen. \cite{jungwirth2022arbeitszeitbedarf}
+einigen Umfragen. 
+Auch gesundheitlich kann die Digitalisierung der
+Landwirtschaft viele Vorteile bieten. Durch den Verzicht auf Pestizide, bzw.
+die Ausbringung durch Drohnen aus der Ferne, wird die Gesundheit der Bauern
+geschont, da sie die giftigen Pestizide nicht einatmen.
+\cite{jungwirth2022arbeitszeitbedarf}
