--- a/kapitel/infrarot.tex
+++ b/kapitel/infrarot.tex
@@ -7,14 +7,21 @@ Berühren empfindlicher Gegenstände, wie Blätter verhindert.(Abbildung
 hohe Temperaturen zu messen, ohne die Infrarotsensorik durch zu hohe
 Temperaturen zu gefährden. \begin{figure}[!h]
 	\centering
-	\includegraphics[width=0.5\textwidth]{bilder/infrarot_pflanze.jpg}
-	\caption[Sprühdrohne]{Sprühdrohne beim Aufbringen von Pestiziden}
+	\includegraphics[width=0.7\textwidth]{bilder/infrarot_pflanze.jpg}
+	\caption[Infrarotaufnahme einer Pflanze]{Infrarotaufnahme einer Pflanze}
 	\label{fig:infrarot_pflanze}
 \end{figure}
 
-Die Bestandteile einer Infrarotkamera beinhalten
-eine Optik, einen Detektor, sowie die Verarbeitungselektronik. Die Optiken sind
-häufig Linsen aus Germanium, da diese transparent für Infrarotlicht sind. Es
+Die Bestandteile einer Infrarotkamera beinhalten eine Optik, einen Detektor,
+sowie die Verarbeitungselektronik. (Abbildung \ref{fig:aufbau infrarotsensor})
+\begin{figure}[ht]
+	\centering
+	\includegraphics[width=0.7\textwidth]{bilder/infrarotsensor.png}
+	\caption[Aufbau eines IR-Messgeräts]{Aufbau eines IR-Messgeräts}
+	\label{fig:aufbau infrarotsensor}
+\end{figure}
+
+Die Optiken sind häufig Linsen aus Germanium, da diese transparent für Infrarotlicht sind. Es
 gibt zwei Gruppen von Detektoren. Thermische Detektoren (Bolometer und
 thermophile Detektoren) besitzen sensitive Flächen, welche von der Energie der
 infraroten Strahlung erwärmt werden. Sie sind genau und reagieren schnell,
@@ -24,13 +31,6 @@ Temperaturempfindlichkeit benötigt, wobei man von $<$20 mK spricht, werden
 Quantendetektoren. Jedoch müssen diese gekühlt werden, da sie sonst ein hohes
 Eigenrauschen aufweisen.\cite{may2015transiente}
 
-\begin{figure}[ht]
-	\centering
-	\includegraphics[width=0.5\textwidth]{bilder/infrarotsensor.png}
-	\caption[Aufbau eines IR-Messgeräts]{Aufbau eines IR-Messgeräts}
-	\label{fig:aufbau infrarotsensor}
-\end{figure}
-
 Funktionsweise von Infrarotthermographie: \\ Messgegenstände mit einer
 Temperatur von $>$ 900K strahlen Energie ab, der in mithilfe von
 Wärmebildtechnik sichtbar gemacht werden kann und so als Bild, für den Menschen
@@ -38,4 +38,3 @@ sichtbar dargestellt werden kann. Hierzu werden die Spektralbereiche
 Nahinfrarot(NIR), mittleres Infrarot (MIR) und langes Infrarot (LIR)
 betrachtet. Diese Spektren teilen sich in drei Teile im Bereich von 780 bis
 1400nm auf.\cite{schuster2004infrarotthermographie}
-
