--- a/kapitel/schaedlingsbekaempfung.tex
+++ b/kapitel/schaedlingsbekaempfung.tex
@@ -7,6 +7,18 @@ könnten. Jedoch ist aufgrund der Gefahr von Verwehung die maximale Flughöhe au
 beschränkt.\cite{bvl} Somit erübrigt sich dieser Vorteil, was jedoch bleibt ist
 die fehlende Bodenzerstörung durch Reifen, welche bei einer traktorbasierten
 Ausbringung der Fall wäre. Auch in der Atemluft lagern sich Pestizide ab, was
-bereits 2019 in einer Studie nachfgewiesen wurde, in welcher Baumrinde
-untersucht wurde, wobei man in 47 Proben 104 verschiedene Pestizide finden
-konnte.\cite{clausing2020baumrinden}
+bereits 2019 in einer Studie nachgewiesen wurde, in welcher Baumrinde
+untersucht wurde, wobei das Institut "TIEM Integrierte Umweltüberwachung GbR in
+47 Proben 104 verschiedene Pestizide finden
+konnte.\cite{clausing2020baumrinden} Für fliegende Schädlinge wurde bereits ein
+Konzept für Gewächshäuser entwickelt. Dieses besteht aus einem Roboterarm,
+welcher mit Klebeflächen ausgestattet ist. Dieser bewegt sich über die
+Pflanzen, während die Insekten mit Druckluft aufgeschreckt werden und daraufhin
+in die Klebeflächen fliegen und dort festkleben.
+
+\begin{figure}[!h]
+    \centering
+    \includesvg[width=0.7\textwidth]{bilder/schaedlingsbekaempfung.svg}
+    \caption{Roboter zur Schädlingsbekämpfung}
+    \label{fig:schaedlingsbekaempfung}
+\end{figure}
