--- a/kapitel/tierpflege.tex
+++ b/kapitel/tierpflege.tex
@@ -13,7 +13,7 @@ vollautomatisiert durch die Ställe fahren. (Abb. 5.1)
 
 \begin{figure}[ht]
     \centering
-    \includegraphics[width=0.5\textwidth]{bilder/futterroboter.jpg}
+    \includegraphics[width=0.7\textwidth]{bilder/futterroboter.jpg}
     \caption[Futterroboter in Kuhstall]{Futterroboter in Kuhstall}
-    \label{fig:sprühdrfutterroboter}
+    \label{fig:futterroboter}
 \end{figure}
