--- a/kapitel/ernteundsaat.tex
+++ b/kapitel/ernteundsaat.tex
@@ -1,3 +1,25 @@
-Den meisten Teil des Tages verbringt der Bauer immer noch auf dem Feld. Die einfachste Art hierfür wäre eine Automatisierung der Fahrzeuge. Das heißt ein mobiler Roboter mit Ketten- oder Reifenantrieb, würde durch fest übergebene GPS-Daten Bahnen im Feld abfahren und ernten, bzw. sähen. \\
-Ein wichtiger für das Sähen benötigter Sensor ist ein Ultraschallsensor, zum Messen der Bodenentfernung. Damit können die Samen auf die exakte Tiefe in den Boden eingebracht werden.\\
-Beim Ernten kommt es vorallem auf die Sorte an. Hierbei kommt es weniger auf die Sensorik, als auf die Aktorik an. Das liegt daran, dass alle Pflanzen bei der Ernte ziemlich gleich groß sind, innerhalb ihrer Sorte, welche im Vornherein bekannt ist. Dabei werden die Pflanzen komplett "abgeschnitten". Man könnte jedoch bereits beim Erntevorgang durch eine Bildverarbeitung beschädigte, kaputte Ernte aussortieren. Hierfür wäre vorallem ein sehr gutes Kamerasystem nötig, wobei man jedoch Kosten-Nutzen hierbei beachten sollte, da ein komplexes Kamerasystem schnell sehr teuer werden kann.
+Den meisten Teil des Tages verbringt der Landwirt immernoch auf dem Feld. Die
+einfachste Art, hinsichtlich der Feldarbeit wäre eine Automatisierung der
+Fahrzeuge. Das heißt ein mobiler Roboter mit Ketten- oder Reifenantrieb, würde
+das Feld abfahren und die Saat ausbringen und später im Jahr wieder ernten. \\
+Hierfür muss der Roboter einige elementare Dinge können. Er muss auch bei
+schwierigen Bodenbedinungen gerade Linien auf dem Feld fahren können. Hierfür
+kann man die Antriebsart anpassen, sowie die Reifen durch Ketten ersetzen. Eine
+weitere Herausforderung besteht in der Ausbringung des Saatguts in den Boden.
+Die einfachste Art wäre das Bohren eines Lochs, in welches das Saatkorn fällt.
+Ein sehr trockener, steiniger Boden hat jedoch eine andere Beschaffenheit als
+ein feuchter erdiger Boden. Dafür müssen unterschiedliche Aktoren zur Verfügung
+stehen. Mit einem Kraftsensor kann der Roboter die Kraft messen, welche er
+benötigt, um in den Boden vorzudringen. Anhand dessen kann er ein Bohrgerät für
+die Löcher wählen. Diese verschiedenen Bohrer können zum Beispiel direkt am
+Roboter angebracht sein.\cite{naik2016precision} Ein wichtiger für das Sähen benötigter Sensor ist ein
+Ultraschallsensor, zum Messen der Bodenentfernung. Damit können die Samen auf
+die exakte Tiefe in den Boden eingebracht werden.\\ Beim Ernten kommt es
+vorallem auf die Sorte an. Hierbei kommt es weniger auf die Sensorik, als auf
+die Aktorik an. Das liegt daran, dass alle Pflanzen bei der Ernte ziemlich
+gleich groß sind, innerhalb ihrer Sorte, welche im Vornherein bekannt ist.
+Dabei werden die Pflanzen komplett "abgeschnitten". Man könnte jedoch bereits
+beim Erntevorgang durch eine Bildverarbeitung beschädigte, kaputte Ernte
+aussortieren. Hierfür wäre vorallem ein sehr gutes Kamerasystem nötig, wobei
+man jedoch Kosten-Nutzen hierbei beachten sollte, da ein komplexes Kamerasystem
+schnell sehr teuer werden kann.
