--- a/kapitel/roboterfahrzeuge.tex
+++ b/kapitel/roboterfahrzeuge.tex
@@ -6,7 +6,7 @@ Teil mithilfe von künstlicher Intelligenz.
 
 \begin{figure}[h]
 	\centering
-	\includegraphics[width=0.5\textwidth]{bilder/farmdroid_fd20.png}
+	\includegraphics[width=0.7\textwidth]{bilder/farmdroid_fd20.png}
 	\caption[Farmdroid FD20]{Farmdroid FD20}
 	\label{fig:farmdroid_fd20}
 \end{figure}
@@ -19,7 +19,7 @@ weiterarbeitet, was einen Dauerbetrieb ermöglicht und damit extrem effizient
 ist.\cite{jungwirth2022arbeitszeitbedarf}\\ Die Aufgabe des modernsten
 Agrarroboters der Welt\cite{donaukurier2022} ist die Saat und die
 Unkrautvernichtung. Laut Hersteller hat sich der Farmdroid bereits nach bis zu
-1,5 Jahren ammotisiert und arbeitet ab diesem Zeitpunkt aufgrund der
+1,5 Jahren amortisiert und arbeitet ab diesem Zeitpunkt aufgrund der
 Solarpanels mit extrem niedrigen Unterhaltskosten. Zudem ist der Roboter
 aufgrund der zwei GNSS Empfänger und eines RTK Korrektursignals, welches in der
-Basisstation sehr genau.\cite{jungwirth2022arbeitszeitbedarf}
+Basisstation erzeugt wird, sehr genau.\cite{jungwirth2022arbeitszeitbedarf}
