--- a/kapitel/schaedlingsbekaempfung.tex
+++ b/kapitel/schaedlingsbekaempfung.tex
@@ -14,7 +14,8 @@ konnte.\cite{clausing2020baumrinden} Für fliegende Schädlinge wurde bereits ei
 Konzept für Gewächshäuser entwickelt. Dieses besteht aus einem Roboterarm,
 welcher mit Klebeflächen ausgestattet ist. Dieser bewegt sich über die
 Pflanzen, während die Insekten mit Druckluft aufgeschreckt werden und daraufhin
-in die Klebeflächen fliegen und dort festkleben.
+in die Klebeflächen fliegen und dort festkleben. Der Aufbau ist in Abbildung
+\ref{fig:schaedlingsbekaempfung} nochmals exemplarisch dargestellt.\cite{hoing2020entwicklung}
 
 \begin{figure}[!h]
     \centering
@@ -22,3 +23,4 @@ in die Klebeflächen fliegen und dort festkleben.
     \caption{Roboter zur Schädlingsbekämpfung}
     \label{fig:schaedlingsbekaempfung}
 \end{figure}
+
