--- a/ref/ref.bib
+++ b/ref/ref.bib
@@ -151,3 +151,17 @@ address = {Bonn}
   author={May, M Eng Daniel},
   year={2015}
 }
+@phdthesis{hoing2020entwicklung,
+  title={Entwicklung einer Robotik-L{\"o}sung zur Schneckenbek{\"a}mpfung in der Landwirtschaft},
+  author={H{\"o}ing, Christian},
+  year={2020}
+}
+@inproceedings{naik2016precision,
+  title={Precision agriculture robot for seeding function},
+  author={Naik, Neha S and Shete, Virendra V and Danve, Shruti R},
+  booktitle={2016 international conference on inventive computation technologies (ICICT)},
+  volume={2},
+  pages={1--3},
+  year={2016},
+  organization={IEEE}
+}
