--- a/kapitel/roboterfahrzeuge.tex
+++ b/kapitel/roboterfahrzeuge.tex
@@ -22,4 +22,4 @@ Unkrautvernichtung. Laut Hersteller hat sich der Farmdroid bereits nach bis zu
 1,5 Jahren amortisiert und arbeitet ab diesem Zeitpunkt aufgrund der
 Solarpanels mit extrem niedrigen Unterhaltskosten. Zudem ist der Roboter
 aufgrund der zwei GNSS Empfänger und eines RTK Korrektursignals, welches in der
-Basisstation erzeugt wird, sehr genau.\cite{jungwirth2022arbeitszeitbedarf}
+Basisstation erzeugt wird, sehr genau.\cite{jungwirth2022arbeitszeitbedarf}\cite{spykman2023wirtschaftlichkeitsbewertung}
