--- a/ref/ref.bib
+++ b/ref/ref.bib
@@ -165,3 +165,10 @@ address = {Bonn}
   year={2016},
   organization={IEEE}
 }
+@article{spykman2023wirtschaftlichkeitsbewertung,
+  title={Wirtschaftlichkeitsbewertung eines Feldroboters auf Basis erster Erfahrungen im Praxiseinsatz},
+  author={Spykman, Olivia and Ro{\ss}madl, Andreas and Pfrombeck, Johanna and Kopfinger, Stefan and Busboom, Axel},
+  journal={43. GIL-Jahrestagung, Resiliente Agri-Food-Systeme},
+  year={2023},
+  publisher={Gesellschaft f{\"u}r Informatik eV}
+}
